
AjTalk

An Smalltalk-like interpreter, written in C#.

Work in progress.

2007-09-15
	Creation of this project folder

2008-05-04
	Begin to work with TDD (late but sure)

2008-07-11
	Publish the code in Google Code

2008-08-24
	Add support for local variables in compiling method

2008-09-28
	Skip comments in tokenizer
	More test for Method
	Compile global name in Method
	Set/Get global bytecodes
	Global objects in Machine
	Symbol support in tokenizer
	Method inherits from Block
	Loader from file and tests

2008-10-13
	Update to VS 2008
	VS Tests instead NUnit tests
	Loader support for subclassing, instance variables,
		and method definition

Angel "Java" Lopez
http://www.ajlopez.com/en
http://ajlopez.wordpress.com/