@@ -1,0 +1,4 @@
+﻿FileInfo
+ := 
+ @System.IO.FileInfo new: 'NonexistentFile.txt'
+!
