@@ -1,7 +1,7 @@
 ﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{232A3EF3-8392-409E-8D6B-961EFEE30347}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -102,6 +102,7 @@
     <Compile Include="Compiler.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DotNetObject.cs" />
     <Compile Include="ExecutionBlock.cs">
       <SubType>Code</SubType>
     </Compile>
